avoid layout shift when dragging editor3 blocks

--- a/scripts/core/editor3/styles.scss
+++ b/scripts/core/editor3/styles.scss
@@ -97,6 +97,10 @@ $editor-styleButton-size: 			3rem;
 			.link-toolbar.empty {
 				display: none;
 			}
+
+			&.floating-toolbar-invisible {
+				visibility: hidden;
+			}
 		}
 
 		&.read-only {
